--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build_lib": "ng build ngx-resizable",
+    "build-lib": "ng build ngx-resizable",
     "copy-license": "cp LICENSE.txt dist/ngx-resizable",
     "copy-readme": "cp README.md dist/ngx-resizable",
     "copy-files": "npm run copy-license && npm run copy-readme",
-    "npm_pack": "cd dist/ngx-resizable && npm pack",
+    "npm-pack": "cd dist/ngx-resizable && npm pack",
     "demo2docs": "ng build --base-href https://3dgenomes.github.io/ngx-resizable/ --output-path docs",
-    "package": "npm run build_lib && npm run copy-files && npm run npm_pack && npm run demo2docs",
+    "package": "npm run build-lib && npm run copy-files && npm run npm-pack && npm run demo2docs",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,42 +19,42 @@
   "private": true,
   "dependencies": {
     "@3dgenomes/ngx-resizable": "^1.8.1",
-    "@angular/animations": "^8.1.3",
-    "@angular/common": "^8.1.3",
-    "@angular/compiler": "^8.1.3",
-    "@angular/core": "^8.1.3",
-    "@angular/forms": "^8.1.3",
-    "@angular/platform-browser": "^8.1.3",
-    "@angular/platform-browser-dynamic": "^8.1.3",
-    "@angular/router": "^8.1.3",
-    "core-js": "^2.6.9",
-    "rxjs": "~6.5.2",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "^18.0.6",
+    "@angular/common": "^18.0.6",
+    "@angular/compiler": "^18.0.6",
+    "@angular/core": "^18.0.6",
+    "@angular/forms": "^18.0.6",
+    "@angular/platform-browser": "^18.0.6",
+    "@angular/platform-browser-dynamic": "^18.0.6",
+    "@angular/router": "^18.0.6",
+    "core-js": "^3.37.1",
+    "rxjs": "~7.8.1",
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular-devkit/build-ng-packagr": "~0.801.3",
-    "@angular/cli": "^8.1.3",
-    "@angular/compiler-cli": "^8.1.3",
-    "@angular/language-service": "^8.1.3",
-    "@types/jasmine": "^3.3.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^11.13.18",
-    "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.1.0",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.3.0",
-    "tsickle": "^0.35.0",
-    "tslib": "^1.10.0",
-    "tslint": "~5.12.1",
-    "typescript": "~3.4.5"
+    "@angular-devkit/build-angular": "~18.0.7",
+    "@angular-devkit/build-ng-packagr": "~0.1002.0",
+    "@angular/cli": "^18.0.7",
+    "@angular/compiler-cli": "^18.0.6",
+    "@angular/language-service": "^18.0.6",
+    "@types/jasmine": "^5.1.4",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^20.14.10",
+    "angular-cli-ghpages": "^2.0.1",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ng-packagr": "^18.0.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "tsickle": "^0.46.3",
+    "tslib": "^2.6.3",
+    "tslint": "~6.1.3",
+    "typescript": "~5.4.5"
   }
 }
