--- a/projects/ngx-resizable/package.json
+++ b/projects/ngx-resizable/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/3DGenomes/ngx-resizable/issues"
   },
-  "homepage": "https://3dgenomes.github.io/ngx-resizable/"
+  "homepage": "https://3dgenomes.github.io/ngx-resizable/",
+  "peerDependencies": {
+    "@angular/common": "~18.0.6", 
+    "@angular/core": "~18.0.6"
+  },
+  "dependencies": {
+    "tslib": "^2.6.3"
+  }
 }
