--- a/projects/ngx-resizable/tsconfig.lib.json
+++ b/projects/ngx-resizable/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
-    "target": "es2015",
+    "target": "es2022",
     "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
@@ -23,7 +23,8 @@
     "strictMetadataEmit": true,
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "enableResourceInlining": true
+    "enableResourceInlining": true,
+    "enableIvy": true
   },
   "exclude": [
     "src/test.ts",
